updating 29-march code

--- a/application/modules/admin/layouts/scripts/adminfooter.phtml
+++ b/application/modules/admin/layouts/scripts/adminfooter.phtml
@@ -16,8 +16,16 @@
 			->appendFile($this->baseUrl() . '/assets_admin/js/plugins/dataTables/dataTables.bootstrap.js');
    }
 
+   if(!empty($layout) && ($layout == "dateTime")){//adding DateTime script
+	  $this->headScript()
+	  ->appendFile($this->baseUrl() . '/assets_admin/js/plugins/dateTime/moment.js')
+	  ->appendFile($this->baseUrl() . '/assets_admin/js/plugins/dateTime/bootstrap-datetimepicker.js');
+   }
+
+
 $this->headScript()->appendFile($this->baseUrl() . '/assets_admin/js/sb-admin-2.js');
 $this->headScript()->appendFile($this->baseUrl() . '/assets_admin/js/validation.js') ;
+
 echo $this->headScript();
 
 
@@ -30,7 +38,20 @@ echo $this->headScript();
     </script>
 	 <?php
    }
+
+   if(!empty($layout) && ($layout == "dateTime")){//adding DateTime script
+	  ?>
+	  <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker({
+				  daysOfWeekDisabled: [0, 6]
+				  });
+            });
+        </script>
+  <?php
+  }
 ?>
+
     <!-- /#wrapper -->
 
  <div id="login-copyright"><?php echo date("Y"); ?> &copy; <?php echo COPY_RIGHTS?></div>
