--- a/application/modules/admin/views/scripts/receipt/purchase-order.phtml
+++ b/application/modules/admin/views/scripts/receipt/purchase-order.phtml
@@ -1,1 +1,248 @@
-heloaaaa bachho kaise ho
+
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header"><?php echo $this->header?></h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+            <div class="row">
+
+<div class="receipt-content">
+    <div class="container bootstrap snippet">
+		<div class="row">
+ <form role="form" action="" method="post"  enctype="multipart/form-data">
+			<div class="col-lg-12">
+				<div class="invoice-wrapper">
+                     <?php if(!empty($this->success)){  ?>
+						<div id="success" class="alert alert-success">
+						   <button class="close" data-dismiss="alert">×</button>
+								 <?php echo $this->success;?>
+						</div>
+                        <?php } if(!empty($this->error)){ ?>
+                        <div id="exception" class="alert alert-error">
+                              <button class="close" data-dismiss="alert">×</button>
+                              <?php echo $this->error;?>
+                          </div>
+                        <?php } ?>
+
+        <div class="payment-info">
+            <div class="row">
+                <div class="col-sm-6">
+
+                    <div class="form-group">
+                                <label>Client</label>
+
+                                 <select class="form-control selectClient" required="required" name="client_id" id="client_id">
+                                    <option value="">Select One</option>
+
+                                    <?php foreach($this->clients  as $clients):
+                                        $selected       =   ($this->client == $clients['id']) ? "selected= selected" : "";
+                                        $company_name   =   "company_name   = '$clients[company_name]'";
+                                        $phone          =   "phone          = '$clients[phone]'";
+                                        $address        =   "address        = '$clients[address], $clients[city], $clients[state], $clients[country]'";
+
+
+                                        echo "<option $address $phone $company_name value='".$clients[id]."' $selected >$clients[name]</option>";
+                                    endforeach;?>
+
+                                  </select>
+                    </div>
+                </div>
+		<div class="col-sm-6 text-right">
+
+
+
+
+
+            <div class="form-group">
+			<label>Payment Date</label>
+                <div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" name="payment_date"  required="true" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+							</div>
+						</div>
+					</div>
+
+					<div class="client-details" style="display: none">
+						<div class="row">
+							<div class="col-sm-12">
+								<span>Client Detail</span>
+								    <div class="form-group">
+
+                                            <input class="form-control company_name" readonly="readonly" >
+                                        </div>
+
+									 <div class="form-group">
+
+                                            <p><input class="form-control address" readonly="readonly" ></p>
+											 <p><input class="form-control phone" readonly="readonly" ></p>
+                                        </div>
+
+
+							</div>
+
+
+
+							</div>
+						</div>
+
+
+					<div class="line-items">
+						<div class="headers clearfix">
+							<div class="row">
+								<div class="col-xs-3">Description</div>
+                                <div class="col-xs-2">Aval. Quantity</div>
+								<div class="col-xs-2">Req. Quantity</div>
+								<div class="col-xs-2">Rate</div>
+								<div class="col-xs-3">Remarks</div>
+							</div>
+						</div>
+						<div class="items">
+							<div class="row item">
+
+								<div class="col-xs-3 desc">
+									<div class="form-group">
+                                    <select class="form-control selectProduct" required="required" name="product_id" id="product_id">
+                                    <option value="">Select One</option>
+
+                                    <?php foreach($this->product  as $product):
+                                        $selected       =   ($this->product_id == $product['id']) ? "selected= selected" : "";
+
+                                        $unit           =   "unit           = '$product[unit]'";
+                                        $stock          =   "stock          = '$product[stock]'";
+
+
+                                        echo "<option $unit $stock value='".$product[id]."' $selected >$product[name]</option>";
+                                    endforeach;?>
+
+                                  </select>
+
+							  </div>
+
+								</div>
+
+								<div class="col-xs-2 qty">
+									<div class="form-group">
+                                        <input type="number" readonly="readonly" min="1" alt="If value is 0 that mean this product is not in stock" class="form-control stock" placeholder="50">
+
+                                    </div>
+								</div>
+                                <div class="col-xs-2 qty">
+									<div class="form-group">
+                                        <input type="number" name="ordered_quentity" min="1" required="true" class="form-control midBox ordered_quentity"  style="width: 60%; float: left;"   floplaceholder="50">
+                                    <span class="unit" style="line-height:2"></span>
+                                    </div>
+								</div>
+
+								<div class="col-xs-2 rate text-left">
+									<input type="number" name="rate" required="true"  min="1" class="form-control rate" style="width: 60%; float: left;" placeholder="50">
+                                    <span class="unit_rate" style="line-height:2"></span>
+								</div>
+								<div class="col-xs-3 rate text-right">
+									<input type="text" name="remark" class="form-control" placeholder="Remarks">
+								</div>
+							</div>
+
+						</div>
+						<div class="total text-right">
+
+
+
+
+
+
+							<div class="field grand-total">
+								Total &#8377 <input type="text" class="TotalAmount" placeholder="000.00" name="amount" readonly="true">
+							</div>
+
+
+						</div>
+						<div style="clear:both"></div>
+
+
+
+					</div>
+				</div>
+
+				<div class="footer">
+					<div class="total text-left">
+						<div class="col-md-12">
+
+							<div class="col-md-6">
+						Date of Delivery
+						<div class='input-group date' id='datetimepicker1'>
+												<input type='text' class="form-control" />
+												<span class="input-group-addon">
+													<span class="glyphicon glyphicon-calendar"></span>
+												</span>
+											</div>
+						For
+						 <div class="checkbox">
+    <label>
+      <input type="checkbox"> Our Godown
+    </label>
+	<label>
+      <input type="checkbox"> Your Godown
+    </label>
+  </div>
+						</div>
+								<div class="col-md-6">
+						Payment Term
+						<div class='input-group date' id='datetimepicker1'>
+												<input type='text' class="form-control" />
+												<span class="input-group-addon">
+													<span class="glyphicon glyphicon-calendar"></span>
+												</span>
+											</div>
+						Other Conditions
+						<input class="form-control" type="text" >
+						</div>
+
+						</div>
+						</div>
+				<div style="padding-top:30px;" class="col-md-6 text-left">
+				Supplier's Signature
+				</div>
+				<div style="padding-top:30px;" class="col-md-6 text-right" >
+				Authorised Signatory
+				</div>
+				<div class="col-md-12">
+					Please Provide original P.O. with bill. After Delivery date goods will be accapted after reasonable discount
+					</div>
+				</div>
+				<div class="col-lg-12 text-center">
+						<div class="print">
+							<a href="#">
+								<i class="fa fa-print"></i>
+								Print this receipt
+							</a>
+						</div>
+						</div>
+
+
+            </div>
+ </form>
+		</div>
+
+	</div>
+</div>
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /#page-wrapper -->
+
