--- a/public/assets_admin/css/style.css
+++ b/public/assets_admin/css/style.css
@@ -3,7 +3,7 @@
 }
 .errorMgsBox{
 	color: #FF0000!important;
-    font-size: 13px!important; 
+    font-size: 13px!important;
     display: none;
 }
 .headerAdminImageRadius{
@@ -23,4 +23,8 @@
     text-align: center;
     width: 247px;
 	height: 40px;
+}
+.midBox{
+	float: left !important;
+    width: 60% !important;
 }
