--- a/application/modules/admin/views/scripts/receipt/all-purchase-order.phtml
+++ b/application/modules/admin/views/scripts/receipt/all-purchase-order.phtml
@@ -1,7 +1,7 @@
  <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">View Products</h1>
+                    <h1 class="page-header"><?php echo $this->header?></h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -30,31 +30,43 @@
                                 <table class="table table-striped table-bordered table-hover" id="dataTables">
                                     <thead>
                                         <tr>
-                                            <th>Serial No.</th>
-                                            <th>Products</th>
+                                            <th>P.O.ID</th>
                                             <th>Client</th>
-                                            <th>Units</th>
-                                            <th>Stock</th>
-                                            <th>Price(&#8377)</th>
-                                            <th>Added On</th>
+                                            <th>Product</th>
+                                            <th>Quentity</th>
+                                            <th>Amount</th>
+                                            <th>Status</th>
+                                            <th>Action</th>
                                             <!--<th>Action</th>-->
                                         </tr>
                                     </thead>
                                     <tbody>
                                     <?php
                                     $i          =   1;
-                                    foreach($this->products as $product):
+                                    foreach($this->purchaseOrder as $data):
                                     $class      =   (($i%2)==0) ? "even gradeA" : "odd gradeA";
                                     ?>
                                         <tr class="<?php echo $class ?>">
-                                            <td><?php echo PRODUCT_SERIAL_PREFIX.$product['id'] ?></td>
-                                            <td><?php echo $product['name'] ?></td>
-                                            <td><?php echo $product['client'] ?></td>
-                                            <td><?php echo $product['unit'] ?></td>
-                                            <td class="center"><?php echo $product['stock'] ?></td>
-                                            <td class="center"><?php echo $product['price'] ?></td>
-                                            <td class="center"><?php echo date("d-M-Y", strtotime($product['created_date'])) ?></td>
-                                           <!-- <td class="center">
+                                            <td><?php echo $data['id'] ?></td>
+                                            <td><?php echo $data['client_name'] ?></td>
+                                            <td><?php echo $data['product_name'] ?></td>
+                                            <td><?php echo $data['ordered_quentity'].''.$data['unit'] ?></td>
+                                            <td class="center"><?php echo $data['amount'] ?></td>
+                                            <td class="center"><?php echo $data['status'] ?></td>
+                                            <td class="center">
+                                            <a href="<?php echo $this->url(array('controller' => 'receipt', 'action' => 'print-purchase-order', 'module' => 'admin', 'orderId' => $data['id']), null, true); ?> " class="btn btn-info">
+                                                <span > Print</span>
+                                            </a>
+                                            <a href="<?php echo $this->url(array('controller' => 'receipt', 'action' => 'create-challan', 'module' => 'admin', 'orderId' => $data['id']), null, true); ?> " class="btn btn-info">
+                                                <span >Challan</span>
+                                            </a>
+                                            <a href="<?php echo $this->url(array('controller' => 'receipt', 'action' => 'create-invoice', 'module' => 'admin', 'orderId' => $data['id']), null, true); ?> " class="btn btn-info">
+                                               <span >Invoice</span>
+                                            </a>
+                                            </td>
+                                           <!--
+
+                                           <td class="center">
                                             <a href="#" class="btn btn-info btn-lg">
                                                 <span class="glyphicon glyphicon-edit"></span>
                                             </a>
