--- a/application/modules/admin/views/scripts/receipt/create-challan.phtml
+++ b/application/modules/admin/views/scripts/receipt/create-challan.phtml
@@ -1,4 +1,5 @@
 <?php
+//prd($this->purchaseOrder);
 $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 ?>
         <div id="page-wrapper">
@@ -13,10 +14,10 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 
 <div class="receipt-content">
     <div class="container bootstrap snippet">
-		<form role="form" action="" method="post"  enctype="multipart/form-data">
-		<div class="row">
 
-			<div class="col-lg-12">
+		<div class="row">
+<form role="form" action="" method="post" id="saveForm"  enctype="multipart/form-data" >
+			<div class="col-lg-12"  id="print-div">
 				<div class="invoice-wrapper">
 					<div class="intro">
 						<div class="col-md-2">
@@ -77,7 +78,6 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 						<div class="row">
 							<div class="col-sm-6">
 								<span>Client</span>
-								 <form role="form">
 								    <div class="form-group">
 
                                             <input type="text" readonly="readonly" class="form-control" value="<?php echo $this->purchaseOrder['client_name']  ?>">
@@ -95,10 +95,8 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
                                         </div>
 
 
-								</form>
 							</div>
 							<div class="col-sm-6 text-left">
-							 <form role="form">
 												<div class="col-sm-6 text-left">
 
 													<div class="form-group">
@@ -116,12 +114,13 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 
 												<div class="col-sm-6 text-left">
 												 <div class="form-group">
-																   Date.
-											 <input class="form-control" name="po_date" readonly="readonly" value="<?php echo $this->purchaseOrder['payment_date']  ?>">
+																   Date
+											 <input class="form-control" name="po_date" readonly="readonly"
+													value="<?php echo date("m/d/Y H:i A", strtotime($this->purchaseOrder['payment_date']))  ?>">
 											</div>
 
 													 <div class="form-group">
-																   Date.<div class='input-group date' name="bill_date"  id='datetimepicker2'>
+																   Date<div class='input-group date' name="bill_date"  id='datetimepicker2'>
 												<input type='text' class="form-control" />
 												<span class="input-group-addon">
 													<span class="glyphicon glyphicon-calendar"></span>
@@ -131,8 +130,6 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 
 
 
-
-										</form>
 										</div>
 
 
@@ -148,36 +145,44 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 						<div class="headers clearfix">
 							<div class="row">
 							<div class="col-xs-1">S.No.</div>
-								<div class="col-xs-4">Description</div>
+								<div class="col-xs-3">Description</div>
 								<div class="col-xs-3">Packing</div>
-
-								<div class="col-xs-4 text-right">Required Quantity</div>
+								<div class="col-xs-3">Rate</div>
+								<div class="col-xs-2 text-right">Required Quantity</div>
 							</div>
 						</div>
 						<div class="items">
-						<form role="form">
+
 							<div class="row item">
 								<div class="col-xs-1 desc">
 									1
 								</div>
-								<div class="col-xs-4 qty">
-									<div class="form-group">
-                              <input type="text" class="form-control" readonly="readonly" value="<?php echo $this->purchaseOrder['product_name']  ?>">
-							  <input type="hidden" name="product_id" class="form-control" value="<?php echo $this->purchaseOrder['product_id']  ?>">
+						<div class="col-xs-3 qty">
+							<div class="form-group">
+								<input type="text" class="form-control" readonly="readonly" value="<?php echo $this->purchaseOrder['product_name']  ?>">
+								<input type="hidden" name="product_id" class="form-control" value="<?php echo $this->purchaseOrder['product_id']  ?>">
 
-							  </div>
+							</div>
+						</div>
 
-								</div>
+						<div class="col-xs-3 pack">
+							<div class="form-group">
+								<input type="number" class="form-control quantity"  name="quantity" style="width: 60%; float: left;" required="true" placeholder="50" min="1" max="<?php echo $this->purchaseOrder['ordered_quentity']?>">
+								<span class="unit_rate" style="line-height:2"> <?php echo $this->purchaseOrder['unit']  ?></span>
 
-								<div class="col-xs-3 pack">
-									<div class="form-group">
-                              <input type="number" class="form-control"  name="quantity" style="width: 60%; float: left;" required="true" placeholder="50">
-							  <span class="unit_rate" style="line-height:2"> <?php echo $this->purchaseOrder['unit']  ?></span>
+						  </div>
+						</div>
 
-							  </div>
-								</div>
+						<div class="col-xs-3 pack">
+							<div class="form-group">
+								<input type="number" class="form-control productRate" readonly="readonly" style="width: 60%; float: left;" required="true" value="<?php echo $this->purchaseOrder['rate']  ?>">
+								<span class="unit_rate" style="line-height:2"> /<?php echo $this->purchaseOrder['unit']  ?></span>
 
-								<div class="col-xs-4 pack">
+						  </div>
+						</div>
+
+
+								<div class="col-xs-2 pack">
 									<div class="form-group">
                              <input type="text" class="form-control" readonly="readonly" value="<?php echo $this->purchaseOrder['ordered_quentity'].' ' .$this->purchaseOrder['unit']  ?>">
 							  </div>
@@ -187,12 +192,9 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 							</div>
 
 
-
-
-							</form>
 						</div>
 						<div class="total text-right">
-							<p class="extra-notes">
+							<p class="extra-notes text-left" style="color:#7a7a7a; float: left;font-size:13px; line-height:20px; text-align:left; width: 40%">
 								<strong>Terms & Conditions</strong>
 								1. Subject to Jaipur Jurisdiction Only.<br>
 								2. No Claim for shortage or breakage will be entertained after the delivery of Goods.<br>
@@ -202,58 +204,69 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 							</p>
 
 							<div class="field">
-								Subtotal <span> <input type="number" name="sub_total"></span>
+								Subtotal <span> <input type="number" class="sub_total" readonly="readonly" name="sub_total"></span>
 							</div>
 							<div class="field">
-								VAT 4% <span> <input type="number" name="vat"></span>
+								VAT <?php echo  ($this->vat > 0) ? "(".$this->vat."%)" : ""?>
+								<span>
+									<input type="number" readonly="readonly" class="vat" value="0" vat="<?php echo $this->vat?>" name="vat">
+								</span>
 							</div>
 							<div class="field">
-								Shipping <span> <input type="number" name="shipping"></span>
+								Shipping
+								<span>
+									<input type="number" value="0" class="shipping" readonly="readonly" shipping="<?php echo $this->shipping?>" name="shipping">
+								</span>
 							</div>
 							<div class="field">
-								Discount <span> <input type="number" name="discount"></span>
+								Discount <?php echo  ($this->discount > 0) ? "(".$this->discount."%)" : ""?>
+								<span>
+									<input type="number" value="0" class="discount" readonly="readonly" discount="<?php echo $this->discount?>" name="discount">
+								</span>
 							</div>
 							<div class="field ">
-								Total <span> <input type="number" required="true" name="total"></span>
+								Total <span> <input type="number"  class="total" readonly="readonly" required="true" name="total"></span>
 							</div>
 
 
 						</div>
-						<!--<div class="total text-left">
-						<div class="col-md-12">
-						<p>
-						<strong>Amount In words</strong> One thousand five hundred two only
-						</p>
+
+						<div class="total text-left">
+							<div class="col-md-12">
+								<p class="AmountInWords" style="display: none">
+									<strong>Amount In words</strong>
+								</p>
+							</div>
 						</div>
-						</div>-->
 
 
 					</div>
 				</div>
-
-				<div class="footer">
+				<div class="footer" style="padding-top:15%;" >
 				<div class="col-md-6 text-left">
 				Receiver's Signature
 				</div>
-				<div class="col-md-6 text-right" >
+				<div  class="col-md-6 text-right" >
 				Authorised Signatory
 				</div>
-				<div class="col-md-12">
+				<div class="col-md-12" style="text-align:center">
 					Copyright © 2016. Ashita Chemicals
 					</div>
 				</div>
-				<div class="col-lg-12 text-center">
-						<div class="print">
-							<a href="#">
-								<i class="fa fa-print"></i>
-								Print this receipt
-							</a>
-						</div>
-						</div>
+
 			</div>
 
+			<div class="col-lg-12 text-center">
+						<div class="prints">
+									<input type="hidden" class="form-control" name="added_by" value="<?php echo $adminInfoSession->adminData['admin_user_id']?>">
+									<button class="btn btn-default" type="submit">Save & Print this receipt</button>
+						</div>
+
+			</div>
+
+</form>
 		</div>
-		</form>
+
 	</div>
 </div>
             </div>
