--- a/application/modules/admin/views/scripts/receipt/purchase-order.phtml
+++ b/application/modules/admin/views/scripts/receipt/purchase-order.phtml
@@ -240,7 +240,7 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 
 
 				<div class="col-lg-12 text-center">
-						<div class="print">
+						<div class="prints">
 							<input type="hidden" class="form-control" name="added_by" value="<?php echo $adminInfoSession->adminData['admin_user_id']?>">
 							 <button class="btn btn-default" type="submit">Placed Order</button>
 						</div>
@@ -257,4 +257,3 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
             <!-- /.row -->
         </div>
         <!-- /#page-wrapper -->
-
