--- a/application/modules/admin/views/scripts/receipt/print-purchase-order.phtml
+++ b/application/modules/admin/views/scripts/receipt/print-purchase-order.phtml
@@ -1,4 +1,4 @@
-<?php $order  =  $this->purchaseOrder[0]; //prd($order);?>
+<?php $order  =  $this->purchaseOrder[0]; ?>
 <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
