--- a/application/modules/admin/views/scripts/receipt/create-invoice.phtml
+++ b/application/modules/admin/views/scripts/receipt/create-invoice.phtml
@@ -1,7 +1,5 @@
 <?php
 $adminInfoSession 		= 		new Zend_Session_Namespace('adminInfo');
-$remaning_quentity		= 		(int)($this->purchaseOrder['ordered_quentity'] - $this->purchaseOrder['given_quentity']);
-$remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 ?>
         <div id="page-wrapper">
             <div class="row">
@@ -15,7 +13,9 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 
 <div class="receipt-content">
     <div class="container bootstrap snippet">
- <?php if (isset($this->success) && $this->success != '') { ?>
+
+		<div class="row">
+			 <?php if (isset($this->success) && $this->success != '') { ?>
                                     <div id="success" class="alert alert-success">
                                         <button class="close" data-dismiss="alert">×</button>
                                     <?php echo $this->success; ?>
@@ -31,8 +31,7 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
                                     <?php
                                 }
                             ?>
-		<div class="row">
-<form role="form" action="" method="post" id="saveForm"  enctype="multipart/form-data" >
+<form role="form" action="" method="post" id="saveForm"  enctype="multipart/form-data">
 			<div class="col-lg-12"  id="print-div">
 				<div class="invoice-wrapper">
 					<div class="intro">
@@ -58,8 +57,8 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 							<div class="col-sm-6">
 
 								  <div class="form-group">
-                                            <label>Vat Challan No.</label>
-                                            <strong><input class="form-control" readonly="readonly" value="<?php echo $this->challanNo?>"></strong>
+                                            <label>Vat Invoice No.</label>
+                                            <strong><input class="form-control" readonly="readonly" value="<?php echo $this->invoiceNo?>"></strong>
                                         </div>
 							</div>
 							<div class="col-sm-6 text-right">
@@ -113,6 +112,7 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 
 							</div>
 							<div class="col-sm-6 text-left">
+
 												<div class="col-sm-6 text-left">
 
 													<div class="form-group">
@@ -120,7 +120,7 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 												  </div>
 
 												  <div class="form-group">
-													<p>Bill No.<input class="form-control" name="bill_no" required="true"></p>
+													<p>G.R No.<input class="form-control" name="gr_no" required="true"></p>
 												  </div>
 
 
@@ -137,17 +137,38 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 
 													 <div class="form-group">
 																   Date<div class='input-group date'   id='datetimepicker2'>
-												<input type='text' class="form-control" name="bill_date"  />
+												<input type='text' class="form-control" name="gr_date"  />
 												<span class="input-group-addon">
 													<span class="glyphicon glyphicon-calendar"></span>
 												</span>
 											</div>
 											</div>
-
-
-
 										</div>
 
+
+	<!-- CHallan detail and date--Start-->
+	<?php foreach($this->challan as $challan): ?>
+	<div class="col-sm-6 text-left">
+					<div class="form-group">
+						<p>Challan No.
+						<input class="form-control" name="challan_ids[]" readonly="readonly" value="<?php echo $challan['challan_id']  ?>"></p>
+					  </div>
+
+	</div>
+
+	<div class="col-sm-6 text-left">
+					<div class="form-group">
+						<p>Challan Date.
+						<input class="form-control" readonly="readonly" value="<?php echo date("m/d/Y H:i A", strtotime($challan['payment_date']))  ?>"></p>
+					  </div>
+
+	</div>
+
+	<?php endforeach?>
+
+
+
+<!-- CHallan detail and date--Start-->
 
 
 								</div>
@@ -162,22 +183,24 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 							<div class="row">
 							<div class="col-xs-1">S.No.</div>
 								<div class="col-xs-3">Description</div>
-								<div class="col-xs-3">Packing</div>
+								<div class="col-xs-3">Quantity</div>
 								<div class="col-xs-3">Rate</div>
-								<div class="col-xs-2 text-right" title="This is a remaning quantity which has to be provided">Required Quantity</div>
+								<div class="col-xs-2 text-right">Amount</div>
 							</div>
 						</div>
+
+				<!-- Challan product detail and date--Start-->
+				 <?php $i=1;
+				 foreach($this->challan as $challan): ?>
 						<div class="items">
 
 							<div class="row item">
 								<div class="col-xs-1 desc">
-									1
+									<?=$i?>
 								</div>
 						<div class="col-xs-3 qty">
 							<div class="form-group">
 								<input type="text" class="form-control" readonly="readonly" value="<?php echo $this->purchaseOrder['product_name']  ?>">
-								<input type="hidden" name="product_id" class="form-control" value="<?php echo $this->purchaseOrder['product_id']  ?>">
-								<input type="hidden" name="order_product_id" class="form-control" value="<?php echo $this->purchaseOrder['order_product_id']  ?>">
 
 
 							</div>
@@ -185,7 +208,7 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 
 						<div class="col-xs-3 pack">
 							<div class="form-group">
-								<input type="number" class="form-control quantity"  name="quantity" style="width: 60%; float: left;" required="true" placeholder="50" min="1" max="<?php echo $remaning_quentity?>">
+								<input type="number" class="form-control"  value="<?=$challan['quantity']?>" style="width: 60%; float: left;" readonly="readonly" >
 								<span class="unit_rate" style="line-height:2"> <?php echo $this->purchaseOrder['unit']  ?></span>
 
 						  </div>
@@ -193,17 +216,17 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 
 						<div class="col-xs-3 pack">
 							<div class="form-group">
-								<input type="number" class="form-control productRate" readonly="readonly" style="width: 60%; float: left;" required="true" value="<?php echo $this->purchaseOrder['rate']  ?>">
+								<input type="number" class="form-control" readonly="readonly" style="width: 60%; float: left;" required="true" value="<?php echo $this->purchaseOrder['rate']  ?>">
 								<span class="unit_rate" style="line-height:2"> /<?php echo $this->purchaseOrder['unit']  ?></span>
 
 						  </div>
 						</div>
 
 
-								<div class="col-xs-2 pack" title="This is a remaning quantity which has to be provided">
+								<div class="col-xs-2 pack">
 									<div class="form-group">
                              <input type="text" class="form-control" readonly="readonly" value="<?php
-							 echo  $remaning_quentity.' ' .$this->purchaseOrder['unit']  ?>">
+							 echo  $challan['sub_total'] ?>">
 							  </div>
 								</div>
 
@@ -212,6 +235,24 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 
 
 						</div>
+				<?php $i++;
+					//Calculating all amount which has been received in challan
+					$totalSubtotal 		=	$totalSubtotal  + $challan['sub_total'];
+					$totalVat 			=	$totalVat 		+ $challan['vat'];
+					$totalShipping 		=	$totalShipping  + $challan['shipping'];
+					$totalDiscount 		=	$totalDiscount  + $challan['discount'];
+					$total 				=	$total 			+ $challan['total'];
+
+				endforeach;
+					$totalSubtotal 		=	number_format($totalSubtotal, 2, '.', '');
+					$totalVat 			=	number_format($totalVat, 2, '.', '');
+					$totalShipping 		=	number_format($totalShipping, 2, '.', '');
+					$totalDiscount 		=	number_format($totalDiscount, 2, '.', '');
+					$total 				=	number_format($total, 2, '.', '');
+
+				?>
+
+
 						<div class="total text-right">
 							<p class="extra-notes text-left" style="color:#7a7a7a; float: left;font-size:13px; line-height:20px; text-align:left; width: 40%">
 								<strong>Terms & Conditions</strong>
@@ -223,28 +264,28 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 							</p>
 
 							<div class="field">
-								Subtotal <span> <input type="number" class="sub_total" readonly="readonly" name="sub_total"></span>
+								Subtotal <span> <input type="text" name="sub_total" readonly="readonly" value="<?=$totalSubtotal?>"></span>
 							</div>
 							<div class="field">
 								VAT <?php echo  ($this->vat > 0) ? "(".$this->vat."%)" : ""?>
 								<span>
-									<input type="number" readonly="readonly" class="vat" value="0" vat="<?php echo $this->vat?>" name="vat">
+									<input type="text" name="vat" readonly="readonly" value="<?=$totalVat?>"  >
 								</span>
 							</div>
 							<div class="field">
 								Shipping
 								<span>
-									<input type="number" value="0" class="shipping" readonly="readonly" shipping="<?php echo $this->shipping?>" name="shipping">
+									<input type="text" name="shipping" value="<?=$totalShipping?>" readonly="readonly" >
 								</span>
 							</div>
 							<div class="field">
 								Discount <?php echo  ($this->discount > 0) ? "(".$this->discount."%)" : ""?>
 								<span>
-									<input type="number" value="0" class="discount" readonly="readonly" discount="<?php echo $this->discount?>" name="discount">
+									<input type="text" name="discount" value="<?=$totalDiscount?>"  readonly="readonly"  >
 								</span>
 							</div>
 							<div class="field ">
-								Total <span> <input type="number"  class="total" readonly="readonly" required="true" name="total"></span>
+								Total <span> <input type="text" name="total" readonly="readonly" value="<?=$total?>"></span>
 							</div>
 
 
@@ -252,11 +293,17 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 
 						<div class="total text-left">
 							<div class="col-md-12">
-								<p class="AmountInWords" style="display: none">
-									<strong>Amount In words</strong>
+								<p class="AmountInWords">
+									<strong>Amount In words:</strong>
+									<?php
+									$f = new NumberFormatter("en", NumberFormatter::SPELLOUT);
+										$inWords =  $f->format($total);
+										echo $inWords;
+										?>
+
 
 								</p>
-								<input type="hidden"  class="totalInWords" readonly="readonly"  name="totalInWords">
+								<input type="hidden" name="totalInWords" readonly="readonly" value="<?=$inWords?>">
 							</div>
 						</div>
 
@@ -280,7 +327,7 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 			<div class="col-lg-12 text-center">
 						<div class="prints">
 									<input type="hidden" class="form-control" name="added_by" value="<?php echo $adminInfoSession->adminData['admin_user_id']?>">
-									<button class="btn btn-default" type="submit">Create challan</button>
+									<button class="btn btn-default" type="submit">Save & Print Invoice</button>
 						</div>
 
 			</div>
