--- a/application/modules/admin/views/scripts/receipt/print-challan.phtml
+++ b/application/modules/admin/views/scripts/receipt/print-challan.phtml
@@ -1,5 +1,5 @@
 <?php
- $challan  =  $this->challan[0];  
+ $challan  =  $this->challan[0];
 ?>
         <div id="page-wrapper">
             <div class="row">
@@ -13,7 +13,22 @@
 
 <div class="receipt-content">
     <div class="container bootstrap snippet">
-
+ <?php if (isset($this->success) && $this->success != '') { ?>
+                                    <div id="success" class="alert alert-success">
+                                        <button class="close" data-dismiss="alert">×</button>
+                                    <?php echo $this->success; ?>
+                                    </div>
+                                <?php } ?>
+                                <?php
+                                if (isset($this->error) && $this->error != '') {
+                                    ?>
+                                    <div id="exception" class="alert alert-error">
+                                        <button class="close" data-dismiss="alert">×</button>
+                                    <?php echo $this->error; ?>
+                                    </div>
+                                    <?php
+                                }
+                            ?>
 		<div class="row">
 <form role="form" action="" method="post" id="saveForm"  enctype="multipart/form-data" >
 			<div class="col-lg-12"  id="print-div">
@@ -54,7 +69,7 @@
             <div class="form-group">
 			<label>Payment Date</label>
                 <div class='input-group' style="margin-left: 66%;">
-                    <input type='text' class="form-control" readonly="readonly" value="<?php echo date("m-d-Y", strtotime($challan['payment_date']))?>"/>                     
+                    <input type='text' class="form-control" readonly="readonly" value="<?php echo date("m-d-Y", strtotime($challan['payment_date']))?>"/>
                 </div>
             </div>
 
